# ArmaDAO

./: .gitignore  ARMDyQvhhuDJ4ribW5aeJu1L8Wurq6cbyuLQivAsg3HE.json  Anchor.toml  README.md  Readme.md
DAO_Programs/: .gitignore  Anchor.toml  Cargo.toml  Readme.md  package-lock.json  package.json  tsconfig.json
DAO_Programs/crates/daoist-programs/: Cargo.toml
DAO_Programs/crates/daoist-programs/src/: errors.rs  lib.rs
DAO_Programs/crates/daoist-programs/src/modules/: core_program.rs  mod.rs  proposal_program.rs  staking_program.rs
DAO_Programs/programs/staking/: Cargo.toml
DAO_Programs/programs/staking/src/: errors.rs  helpers.rs  lib.rs
DAO_Programs/programs/staking/src/contexts/: cleanup_stake.rs  cleanup_stake_subdao.rs  initialize_stake.rs  initialize_stake_subdao.rs  mod.rs  stake.rs  stake_handler.rs  stake_subdao.rs
DAO_Programs/programs/staking/src/state/: mod.rs  stake.rs
DAO_Programs/test_validator_programs/: README.md
DAO_Programs/tests/: dao.ts  mint_nft.ts
armada-api/: package-lock.json  package.json
fe/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
fe/app/: globals.css  layout.tsx  navbar.tsx  page.tsx  style.module.css
fe/lib/: blockchain-config.ts  metadata.json  routes.ts
fe/mock/: daos.ts  featuredDao.ts  fleets.ts  forums.ts  modules.ts  projects.ts  proposals.ts  team-member.ts  threads.ts
programs/dao/: Cargo.toml
programs/proposal/: Cargo.toml
scripts/: package.json
scripts/armadao-nft/: README.md  cache.json  config.json
tests/: dao.ts
(+241 files in other folders)
