[package]
name = "daoist-programs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "daoist_programs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
