[package]
name = "staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "daoist-programs/idl-build"
]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
#anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"] }
#anchor-spl = { git = "https://github.com/coral-xyz/anchor.git" }
# getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.18.8"
# winnow="=0.4.1"
# toml_datetime="=0.6.1"
daoist-programs = {path = "../../crates/daoist-programs"}
